--- a/s.css
+++ b/s.css
@@ -3,7 +3,7 @@ body {
     color: #efefef;
     font-family: monospace;
     font-size: 16px;
-    max-width: 82%;
+    max-width: 64em;
     margin: auto;
 }
 
