--- a/articles/articles.css
+++ b/articles/articles.css
@@ -1,12 +1,12 @@
 body {
-    font-family: "Hoefler Text", "Times New Roman", serif;
+    font-family: "Noto Sans", "Verdana", sans-serif;
     font-size: 16px;
     max-width: 72%;
     margin: auto;
 }
 
 h2 {
-    margin-top: 2em;
+    margin-top: 1.5em;
 }
 
 h3 {
@@ -14,8 +14,6 @@ h3 {
 }
 
 code {
-    background-color: #000000;
-    border: 1px solid #dfd3ce;
     display: block;
     padding: 10px;
 }
